Upload Biblioteca Forms + String DataBase

--- a/Código-Fonte/E-Assistence/E-Assistence.Forms/App.config
+++ b/Código-Fonte/E-Assistence/E-Assistence.Forms/App.config
@@ -2,17 +2,17 @@
 <configuration>
     <configSections>
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="FormInicio.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+            <section name="E_Assistence.Forms.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
     <applicationSettings>
-        <FormInicio.Properties.Settings>
+        <E_Assistence.Forms.Properties.Settings>
             <setting name="connectionDataBase" serializeAs="String">
                 <value>Persist Security Info=False; server=45.56.115.144; database=evoluin_sys; uid=evoluin_sys; pwd=q8ACr0n1LBof</value>
             </setting>
-        </FormInicio.Properties.Settings>
+        </E_Assistence.Forms.Properties.Settings>
     </applicationSettings>
 </configuration>
