--- a/Código-Fonte/E-Assistence/E-Assistence.Forms/E-Assistence.Forms.csproj
+++ b/Código-Fonte/E-Assistence/E-Assistence.Forms/E-Assistence.Forms.csproj
@@ -4,9 +4,9 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9E59D1F3-E71E-4006-940E-872236D7F18A}</ProjectGuid>
+    <ProjectGuid>{180023A9-9D5E-49D0-88C2-2B7C8C061CC0}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>FormInicio</RootNamespace>
+    <RootNamespace>E_Assistence.Forms</RootNamespace>
     <AssemblyName>E-Assistence.Forms</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -65,7 +65,6 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
