--- a/Código-Fonte/E-Assistence/E-Assistence.Forms/Properties/Settings.settings
+++ b/Código-Fonte/E-Assistence/E-Assistence.Forms/Properties/Settings.settings
@@ -1,5 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="FormInicio.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="E_Assistence.Forms.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="connectionDataBase" Type="System.String" Scope="Application">
